# aoc

./: .gitattributes  Cargo.toml  replace_user_email
src/: 01_secret_entrance.rs  lib.rs
src/01_secret_entrance/: bench.rs  mod.rs  tests.rs
src/02_gift_shop/: bench.rs  mod.rs  tests.rs
src/03_lobby/: bench.rs  mod.rs  tests.rs
src/04_printing_department/: bench.rs  mod.rs  tests.rs
src/05_cafeteria/: bench.rs  mod.rs  tests.rs
src/06_trash_compactor/: bench.rs  mod.rs  tests.rs
src/07_laboratories/: mod.rs  tests.rs
src/08_playground/: bench.rs  mod.rs  tests.rs
src/09_movie_theater/: bench.rs  mod.rs  tests.rs
src/10_factory/: mod.rs  tests.rs
src/11_reactor/: bench.rs  mod.rs  tests.rs
