[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.8"

## Benchmarks
[[bench]]
name = "01_secret_entrance"
path = "src/01_secret_entrance/bench.rs"
harness = false

[[bench]]
name = "02_gift_shop"
path = "src/02_gift_shop/bench.rs"
harness = false

[[bench]]
name = "03_lobby"
path = "src/03_lobby/bench.rs"
harness = false

[[bench]]
name = "04_printing_department"
path = "src/04_printing_department/bench.rs"
harness = false

## Binaries
[[bin]]
name = "01_secret_entrance"
path = "src/bin/01_secret_entrance.rs"

[[bin]]
name = "02_gift_shop"
path = "src/bin/02_gift_shop.rs"

[[bin]]
name = "03_lobby"
path = "src/bin/03_lobby.rs"

[[bin]]
name = "04_printing_department"
path = "src/bin/04_printing_department.rs"
