[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.8"

## Benchmarks
[[bench]]
name = "01_secret_entrance"
path = "src/01_secret_entrance/bench.rs"
harness = false

[[bench]]
name = "02_gift_shop"
path = "src/02_gift_shop/bench.rs"
harness = false

[[bench]]
name = "03_lobby"
path = "src/03_lobby/bench.rs"
harness = false

[[bench]]
name = "04_printing_department"
path = "src/04_printing_department/bench.rs"
harness = false

[[bench]]
name = "05_cafeteria"
path = "src/05_cafeteria/bench.rs"
harness = false

[[bench]]
name = "06_trash_compactor"
path = "src/06_trash_compactor/bench.rs"
harness = false

[[bench]]
name = "07_laboratories"
path = "src/07_laboratories/bench.rs"
harness = false

[[bench]]
name = "08_playground"
path = "src/08_playground/bench.rs"
harness = false

[[bench]]
name = "09_movie_theater"
path = "src/09_movie_theater/bench.rs"
harness = false

[[bench]]
name = "10_factory"
path = "src/10_factory/bench.rs"
harness = false

## Binaries
[[bin]]
name = "01_secret_entrance"
path = "src/bin/01_secret_entrance.rs"

[[bin]]
name = "02_gift_shop"
path = "src/bin/02_gift_shop.rs"

[[bin]]
name = "03_lobby"
path = "src/bin/03_lobby.rs"

[[bin]]
name = "04_printing_department"
path = "src/bin/04_printing_department.rs"

[[bin]]
name = "05_cafeteria"
path = "src/bin/05_cafeteria.rs"

[[bin]]
name = "06_trash_compactor"
path = "src/bin/06_trash_compactor.rs"

[[bin]]
name = "07_laboratories"
path = "src/bin/07_laboratories.rs"

[[bin]]
name = "08_playground"
path = "src/bin/08_playground.rs"

[[bin]]
name = "09_movie_theater"
path = "src/bin/09_movie_theater.rs"

[[bin]]
name = "10_factory"
path = "src/bin/10_factory.rs"
